--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Chris Loewer</title>
 
   <link rel="stylesheet" href="styles/index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
+  <script src="js/index.js" type="application/javascript"></script>
 </head>
 <body>
 
