Add transition affects to header and header content

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="bg-section">
     </div>
 
-    <div class="header-section vc-container">
-      <div class="vc-content center">
-        <h1>HELLO.</h1>
+    <div class="header-section vc-container" id="intro-header">
+      <div class="content">
+        <span>HELLO.</span>
       </div>
     </div>
 
