Add image below fold.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>Chris Loewer</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>Chris Loewer</title>
 
-  <link rel="stylesheet" href="styles/index.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
-  <script src="js/index.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
+    <script src="js/index.js" type="application/javascript"></script>
 </head>
 <body>
 
-  <div class="main-content">
+<div class="main-content">
 
     <div class="content-section vc-container" id="intro-content">
-      <div class="vc-content center">
-        <h2>Content</h2>
-        <p>ALL OF THE TEXT</p>
-      </div>
+        <div class="vc-content center">
+            <h2>Content</h2>
+            <p>ALL OF THE TEXT</p>
+        </div>
     </div>
 
     <div class="bg-section">
     </div>
 
     <div class="header-section vc-container" id="intro-header">
-      <div class="content">
-        <span>HELLO.</span>
-      </div>
+        <div class="content">
+            <span>HELLO.</span>
+        </div>
     </div>
 
-  </div>
+    <div class="below-fold">
+        <div class="img-section"></div>
+
+        <div class="project-section"></div>
+    </div>
+
+</div>
 
 </body>
 </html>
