--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Chris Loewer</title>
 
     <link rel="stylesheet" href="styles/index.css">
@@ -13,6 +16,7 @@
 <div class="main-content">
 
     <div class="content-section vc-container" id="intro-content">
+        <div class="bg-filter"></div>
         <div class="vc-content center">
             <h2>Content</h2>
             <p>ALL OF THE TEXT</p>
