Tweak appearance and styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <title>Chris Loewer</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
     <script src="js/index.js" type="application/javascript"></script>
 </head>
@@ -18,8 +21,9 @@
     <div class="content-section vc-container" id="intro-content">
         <div class="bg-filter"></div>
         <div class="vc-content center">
-            <h2>Content</h2>
-            <p>ALL OF THE TEXT</p>
+            <p>I am</p>
+            <span class="title">Chris Loewer</span>
+            <p>Full-stack web developer</p>
         </div>
     </div>
 
@@ -28,7 +32,7 @@
 
     <div class="header-section vc-container" id="intro-header">
         <div class="content">
-            <span>HELLO.</span>
+            <span class="title">HELLO.</span>
         </div>
     </div>
 
