Clean up styling for future content blocks

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <title>Chris Loewer</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
@@ -18,12 +17,12 @@
 
 <div class="main-content">
 
-    <div class="content-section vc-container" id="intro-content">
+    <div class="intro-content-section vc-container" id="intro-content">
         <div class="bg-filter"></div>
         <div class="vc-content center">
             <p>I am</p>
             <span class="title">Chris Loewer</span>
-            <p>Full-stack web developer</p>
+            <p>Full-stack Web Developer</p>
         </div>
     </div>
 
@@ -37,9 +36,16 @@
     </div>
 
     <div class="below-fold">
-        <div class="img-section"></div>
+        <div class="img-section">
+            <span class="title">About Me</span>
+        </div>
 
-        <div class="project-section"></div>
+        <div class="content-section vc-container center">
+            <div class="vc-content center">
+                <h2>Stuff HERE</h2>
+                <p>More of the stuff to go here.  I'm me and stuff like that</p>
+            </div>
+        </div>
     </div>
 
 </div>
