Add about me section with text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Chris Loewer</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
@@ -42,8 +42,10 @@
 
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <h2>Stuff HERE</h2>
-                <p>More of the stuff to go here.  I'm me and stuff like that</p>
+                <h2>My name is Chris Loewer</h2>
+                <p>and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
+                <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology, giving us the ability to impact mass audiences.</p>
+                <p>As a full stack developer, I can work with everything from the database layer to the front end interface.  My goal is to be the middleman between designers and developers.</p>
             </div>
         </div>
     </div>
