Add initial styling for a project entry

--- a/index.html
+++ b/index.html
@@ -39,13 +39,29 @@
         <div class="img-section">
             <span class="title">About Me</span>
         </div>
-
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <h2>My name is Chris Loewer</h2>
-                <p>and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
+                <p>My name is Chris Loewer and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
                 <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology, giving us the ability to impact mass audiences.</p>
                 <p>As a full stack developer, I can work with everything from the database layer to the front end interface.  My goal is to be the middleman between designers and developers.</p>
+            </div>
+        </div>
+
+        <div class="img-section">
+            <span class="title">Projects</span>
+        </div>
+        <div class="content-section vc-container center">
+            <div class="vc-content center">
+                <div class="project">
+                    <div class="thumb">
+                        <img src="resources/coffee-station.jpg" alt="project">
+                    </div>
+                    <div class="description">
+                        <h2>Personal Blog</h2>
+                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
+                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
