Add project content and links.

--- a/index.html
+++ b/index.html
@@ -54,34 +54,36 @@
             <div class="vc-content center">
                 <div class="project">
                     <div class="thumb">
-                        <img src="resources/coffee-station.jpg" alt="project">
+                        <img src="resources/blog.jpg" alt="project">
                     </div>
                     <div class="description">
-                        <h2>Personal Blog</h2>
+                        <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
                         <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
                         <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
                     </div>
                 </div>
+                <hr>
 
                 <div class="project reverse">
                     <div class="thumb">
-                        <img src="resources/coffee-station.jpg" alt="project">
+                        <img src="resources/ranch.jpg" alt="project">
                     </div>
                     <div class="description">
-                        <h2>Personal Blog</h2>
-                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
+                        <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
+                        <p>This is a second iteration of a website intended to attract business for a local ranch broker. While I initially designed this website as a static site, it has recently been updated to include a CMS, allowing the business owner to add their own content.</p>
                         <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
                     </div>
                 </div>
+                <hr>
 
                 <div class="project">
                     <div class="thumb">
-                        <img src="resources/coffee-station.jpg" alt="project">
+                        <img src="resources/trello.jpg" alt="project">
                     </div>
                     <div class="description">
-                        <h2>Personal Blog</h2>
-                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
+                        <h2><a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics">Trello Analytics Tool</a></h2>
+                        <p>This tool allows users visualize their Trello metrics, viewing their individual activity as well as the total of their team.  The goal is to to provide additional analytics to Trello, allowing a way to quantify progress being made when using Trello as a task management system.</p>
+                        <p class="subtext">HTML - CSS - Javascript - Handlebars</p>
                     </div>
                 </div>
             </div>
