Change fonts to Montserrat and update intro animations.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Chris Loewer</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
@@ -59,7 +59,7 @@
                     <div class="description">
                         <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
                         <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
+                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
                     </div>
                 </div>
                 <hr>
