--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
     </div>
 
     <div class="below-fold">
-        <div class="img-section">
+        <div class="sub-header-section">
             <span class="title">About Me</span>
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
+                <img class="profile" src="resources/coffee-station.jpg">
                 <p>My name is Chris Loewer and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
                 <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to let us impact mass audiences.</p>
                 <p>As a full stack developer, I can work with everything from the database layer to the front end interface.  My goal is to be the middleman between designers and developers.</p>
             </div>
         </div>
 
-        <div class="img-section">
+        <div class="sub-header-section">
             <span class="title">Projects</span>
         </div>
         <div class="content-section vc-container center">
@@ -88,6 +89,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="sub-header-section">
+            <span class="title">Find Me Online</span>
+        </div>
+        <div class="content-section vc-container center">
+            <div class="vc-content center">
+                <p>Basically I can can design and implement a dope-ass website for you.</p>
+            </div>
+        </div>
+
     </div>
 
 </div>
