Add "What I Do" section with content and icons!

--- a/index.html
+++ b/index.html
@@ -41,10 +41,40 @@
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <img class="profile" src="resources/coffee-station.jpg">
+                <img class="profile" alt="My natural habitat" src="resources/coffee-station.jpg">
                 <p>My name is Chris Loewer and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
                 <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to let us impact mass audiences.</p>
                 <p>As a full stack developer, I can work with everything from the database layer to the front end interface.  My goal is to be the middleman between designers and developers.</p>
+            </div>
+        </div>
+
+        <div class="sub-header-section">
+            <span class="title">What I Do</span>
+        </div>
+        <div class="content-section vc-container center">
+            <div class="vc-content center">
+                <div class="column-container">
+                    <div class="column">
+                        <img alt="Design" src="resources/wireframe.svg" class="skill-icon">
+                        <h3>Web Design</h3>
+                        <p>I help shape ideas into tangible designs that can be implemented.  Through multiple iterations of wireframes and mockups, I ensure my designs fit the original vision.</p>
+                    </div>
+                    <div class="column">
+                        <img alt="Development" src="resources/code-symbol.svg" class="skill-icon">
+                        <h3>Web Development</h3>
+                        <p>I meticulously craft beautiful websites from the ground up.  I offer both CMS powered and completely custom sites depending on the degree of flexibility needed.</p>
+                    </div>
+                    <div class="column">
+                        <img alt="Development" src="resources/database.svg" class="skill-icon">
+                        <h3>Data Solutions</h3>
+                        <p>From data mining to setting up database systems, I handle a wide range of information needs, arranging the results into a usable form.</p>
+                    </div>
+                    <div class="column">
+                        <img alt="Development" src="resources/console.svg" class="skill-icon">
+                        <h3>Custom Programming</h3>
+                        <p>From web apps to desktop applications, I create custom software to meet specific needs of clients.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -96,6 +126,16 @@
         <div class="content-section vc-container center">
             <div class="vc-content center">
                 <p>Basically I can can design and implement a dope-ass website for you.</p>
+                <p>Put all of my contacts and social stuff here as ICONS</p>
+            </div>
+        </div>
+
+        <div class="sub-header-section">
+            <span class="title">Work With Me</span>
+        </div>
+        <div class="content-section vc-container center">
+            <div class="vc-content center">
+                <p>Have an exciting project or opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
             </div>
         </div>
 
