Add TODOs for future notice

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Chris Loewer</title>
 
+    <!-- TODO Confirm only loaded fonts that are used -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
@@ -125,8 +126,8 @@
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <p>Basically I can can design and implement a dope-ass website for you.</p>
-                <p>Put all of my contacts and social stuff here as ICONS</p>
+                <p>Want to connect with me online and see what else I'm up to?</p>
+                <!-- TODO Add Social icons to connect to various sites -->
             </div>
         </div>
 
