--- a/index.html
+++ b/index.html
@@ -126,7 +126,27 @@
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <p>Want to connect with me online and see what else I'm up to?</p>
+                <p>Connect with me and see what else I've been up to.</p>
+                <div class="social-item">
+                    <img src="resources/resume.svg" alt="LinkedIn" class="social-icon">
+                    <a href="#" class="link">Resume</a>
+                </div>
+                <div class="social-item">
+                    <img src="resources/mail.svg" alt="LinkedIn" class="social-icon">
+                    <a href="#" class="link">Email</a>
+                </div>
+                <div class="social-item">
+                    <img src="resources/linkedin.svg" alt="LinkedIn" class="social-icon">
+                    <a href="#" class="link">LinkedIn</a>
+                </div>
+                <div class="social-item">
+                    <img src="resources/github.svg" alt="LinkedIn" class="social-icon">
+                    <a href="#" class="link">GitHub</a>
+                </div>
+                <div class="social-item">
+                    <img src="resources/twitter.svg" alt="LinkedIn" class="social-icon">
+                    <a href="#" class="link">Twitter</a>
+                </div>
                 <!-- TODO Add Social icons to connect to various sites -->
             </div>
         </div>
