Rework layout of social icons for simplicity.

--- a/index.html
+++ b/index.html
@@ -122,32 +122,42 @@
         </div>
 
         <div class="sub-header-section">
-            <span class="title">Find Me Online</span>
+            <span class="title">Connect</span>
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
                 <p>Connect with me and see what else I've been up to.</p>
                 <div class="social-item">
-                    <img src="resources/resume.svg" alt="LinkedIn" class="social-icon">
-                    <a href="#" class="link">Resume</a>
+                    <a href="#" class="link">
+                        <img src="resources/resume.svg" alt="LinkedIn" class="social-icon">
+                        Resume
+                    </a>
                 </div>
                 <div class="social-item">
-                    <img src="resources/mail.svg" alt="LinkedIn" class="social-icon">
-                    <a href="#" class="link">Email</a>
+                    <a href="#" class="link">
+                        <img src="resources/mail.svg" alt="LinkedIn" class="social-icon">
+                        Email
+                    </a>
                 </div>
                 <div class="social-item">
-                    <img src="resources/linkedin.svg" alt="LinkedIn" class="social-icon">
-                    <a href="#" class="link">LinkedIn</a>
+                    <a href="#" class="link">
+                        <img src="resources/linkedin.svg" alt="LinkedIn" class="social-icon">
+                        LinkedIn
+                    </a>
                 </div>
                 <div class="social-item">
-                    <img src="resources/github.svg" alt="LinkedIn" class="social-icon">
-                    <a href="#" class="link">GitHub</a>
+                    <a href="#" class="link">
+                        <img src="resources/github.svg" alt="LinkedIn" class="social-icon">
+                        GitHub
+                    </a>
                 </div>
                 <div class="social-item">
-                    <img src="resources/twitter.svg" alt="LinkedIn" class="social-icon">
-                    <a href="#" class="link">Twitter</a>
+                    <a href="#" class="link">
+                        <img src="resources/twitter.svg" alt="LinkedIn" class="social-icon">
+                        Twitter
+                    </a>
                 </div>
-                <!-- TODO Add Social icons to connect to various sites -->
+                <!-- TODO Add links -->
             </div>
         </div>
 
@@ -156,7 +166,7 @@
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <p>Have an exciting project or opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
+                <p>Do you have an exciting project or opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
             </div>
         </div>
 
