Rework "Connect" section with new content.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="content-section vc-container center">
             <div class="vc-content center">
-                <p>Connect with me and see what else I've been up to.</p>
+                <h2>Find Me Online</h2>
                 <div class="social-item">
                     <a href="#" class="link">
                         <img src="resources/resume.svg" alt="LinkedIn" class="social-icon">
@@ -158,18 +158,16 @@
                     </a>
                 </div>
                 <!-- TODO Add links -->
+
+                <hr>
+                <h2>New Projects</h2>
+                <p>I am currently accepting project proposals.  If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
+
+                <hr>
+                <h2>Work With Me</h2>
+                <p>Do you have an exciting opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
             </div>
         </div>
-
-        <div class="sub-header-section">
-            <span class="title">Work With Me</span>
-        </div>
-        <div class="content-section vc-container center">
-            <div class="vc-content center">
-                <p>Do you have an exciting project or opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
-            </div>
-        </div>
-
     </div>
 
 </div>
