Change font and tweak content and styling.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- TODO Confirm only loaded fonts that are used -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="application/javascript"></script>
@@ -43,9 +44,8 @@
         <div class="content-section vc-container center">
             <div class="vc-content center">
                 <img class="profile" alt="My natural habitat" src="resources/coffee-station.jpg">
-                <p>My name is Chris Loewer and I love building things.  Specifically, I love creating practical, yet elegant, web applications that people will use to enrich their lives.</p>
-                <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to let us impact mass audiences.</p>
-                <p>As a full stack developer, I can work with everything from the database layer to the front end interface.  My goal is to be the middleman between designers and developers.</p>
+                <p>My name is Chris Loewer and I love building beautiful things.</p>
+                <p>I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
             </div>
         </div>
 
@@ -86,7 +86,7 @@
             <div class="vc-content center">
                 <div class="project">
                     <div class="thumb">
-                        <img src="resources/blog.jpg" alt="project">
+                        <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/blog.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
@@ -98,7 +98,7 @@
 
                 <div class="project reverse">
                     <div class="thumb">
-                        <img src="resources/ranch.jpg" alt="project">
+                        <a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website"><img src="resources/ranch.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
@@ -110,7 +110,7 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <img src="resources/trello.jpg" alt="project">
+                        <a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics"><img src="resources/trello.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics">Trello Analytics Tool</a></h2>
@@ -160,12 +160,9 @@
                 <!-- TODO Add links -->
 
                 <hr>
-                <h2>New Projects</h2>
-                <p>I am currently accepting project proposals.  If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
-
-                <hr>
                 <h2>Work With Me</h2>
-                <p>Do you have an exciting opportunity that might interest me?  I'd love to hear more about it.  Drop me a line and I'll get back to you.</p>
+                <p>I am currently open to project proposals.  If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
+
             </div>
         </div>
     </div>
