--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content-section vc-container center">
             <div class="vc-content center">
                 <img class="profile" alt="My natural habitat" src="resources/profile-2.jpg">
-                <p>My name is Chris Loewer and I lbecame a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
+                <p>My name is Chris Loewer and I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
             </div>
         </div>
 
