Add fixed image separators between content sections.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Chris Loewer</title>
@@ -38,21 +39,21 @@
     </div>
 
     <div class="below-fold">
-        <div class="sub-header-section">
-            <span class="title">About Me</span>
-        </div>
-        <div class="content-section vc-container center">
+       <div class="content-section vc-container center border-top">
             <div class="vc-content center">
+                <div class="title">About Me</div>
+                <hr>
                 <img class="profile" alt="My natural habitat" src="resources/profile-2.jpg">
                 <p>My name is Chris Loewer and I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
             </div>
         </div>
 
-        <div class="sub-header-section">
-            <span class="title">What I Do</span>
-        </div>
+        <div class="img-section" id="work-img"></div>
+
         <div class="content-section vc-container center">
             <div class="vc-content center">
+                <div class="title">What I Do</div>
+                <hr>
                 <div class="column-container">
                     <div class="column">
                         <img alt="Design" src="resources/wireframe.svg" class="skill-icon">
@@ -78,11 +79,12 @@
             </div>
         </div>
 
-        <div class="sub-header-section">
-            <span class="title">Projects</span>
-        </div>
+        <div class="img-section" id="projects-img"></div>
+
         <div class="content-section vc-container center">
             <div class="vc-content center">
+                <div class="title">Projects</div>
+                <hr>
                 <div class="project">
                     <div class="thumb">
                         <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/blog.jpg" alt="project"></a>
@@ -120,11 +122,12 @@
             </div>
         </div>
 
-        <div class="sub-header-section">
-            <span class="title">Connect</span>
-        </div>
+        <div class="img-section" id="connect-img"></div>
+
         <div class="content-section vc-container center">
             <div class="vc-content center">
+                <div class="title">Connect</div>
+                <hr>
                 <h2>Find Me Online</h2>
                 <div class="social-item">
                     <a href="#" class="link">
