Add slanted dividers between sections and adjust content spacing.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="below-fold">
 
-        <div class="content-section vc-container center">
+        <div class="content-section vc-container center slant-separator">
             <div class="vc-content center">
                 <div class="title">About Me</div>
                 <hr>
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class="content-section vc-container center">
+        <div class="content-section vc-container center slant-separator alt-slant">
             <div class="vc-content center">
                 <div class="title">What I Do</div>
                 <hr>
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="content-section vc-container center">
+        <div class="content-section vc-container center slant-separator">
             <div class="vc-content center">
                 <div class="title">Projects</div>
                 <hr>
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="content-section vc-container center">
+        <div class="content-section vc-container center slant-separator alt-slant">
             <div class="vc-content center">
                 <div class="title">Connect</div>
                 <hr>
