Create and add two new icons for What I Do section.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="column-container">
                     <div class="column">
-                        <img alt="Design" src="resources/wireframe.svg" class="skill-icon">
+                        <img alt="Design" src="resources/web-design.svg" class="skill-icon">
                         <h3>Web Design</h3>
                         <p>I help shape ideas into tangible designs that can be implemented.  Through multiple iterations of wireframes and mockups, I ensure my designs fit the original vision.</p>
                     </div>
@@ -71,7 +71,7 @@
                         <p>From data mining to setting up database systems, I handle a wide range of information needs, arranging the results into a usable form.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/console.svg" class="skill-icon">
+                        <img alt="Development" src="resources/programming.svg" class="skill-icon">
                         <h3>Custom Programming</h3>
                         <p>From web apps to desktop applications, I create custom software to meet specific needs of clients.</p>
                     </div>
