Add two more icons.

--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
 
                 <div class="column-container">
                     <div class="column">
-                        <img alt="Design" src="resources/web-design.svg" class="skill-icon">
+                        <img alt="Design" src="resources/design.svg" class="skill-icon">
                         <h3>Web Design</h3>
                         <p>I help shape ideas into tangible designs that can be implemented.  Through multiple iterations of wireframes and mockups, I ensure my designs fit the original vision.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/code-symbol.svg" class="skill-icon">
+                        <img alt="Development" src="resources/web-design.svg" class="skill-icon">
                         <h3>Web Development</h3>
                         <p>I meticulously craft beautiful websites from the ground up.  I offer both CMS powered and completely custom sites depending on the degree of flexibility needed.</p>
-                    </div>
-                    <div class="column">
-                        <img alt="Development" src="resources/database.svg" class="skill-icon">
-                        <h3>Data Solutions</h3>
-                        <p>From data mining to setting up database systems, I handle a wide range of information needs, arranging the results into a usable form.</p>
                     </div>
                     <div class="column">
                         <img alt="Development" src="resources/programming.svg" class="skill-icon">
                         <h3>Custom Programming</h3>
                         <p>From web apps to desktop applications, I create custom software to meet specific needs of clients.</p>
+                    </div>
+                    <div class="column">
+                        <img alt="Development" src="resources/cloud.svg" class="skill-icon">
+                        <h3>Data Solutions</h3>
+                        <p>From data mining to setting up database systems, I handle a wide range of information needs, arranging the results into a usable form.</p>
                     </div>
                 </div>
             </div>
